...
  );

  return (
    <Provider theme={theme}>
      <SafeAreaView style={{ flex: 1 }}>
        {!isLoading ? (
          <View style={{ flex: 1 }} testID="user-page">
            {user ? (
              <UserCard
                userData={user}
                onSwitch={isMyPage}
                editOnPress={() => router.replace('/album/newAlbum')}
                homeOnPress={() => router.navigate('/(tabs)/(user)/user')}
...
