...
export default function RootLayout() {
  return (
    <PaperProvider theme={theme}>
      <View style={styles.outerContainer}>
        <View style={styles.innerContainer}>
          <View style={styles.header}>
            <Text style={styles.title}>PixVault</Text>
          </View>
          <Stack
            screenOptions={{
              headerStyle: {
                backgroundColor: theme.colors.surface,
              },
...
