...
const users = [
  /* password only uses test */
  {
    id: 1,
    name: 'Chihiro Ogino',
    birthday: new Date('1992-08-16'),
    country: 'Japan',
    accountDescription: 'welcome to my page',
    email: 'chihiro@example.com',
    passwordHash: 'hashed_password_1',
  },
  {
    id: 2,
...
