appId: com.final_project_winter_2025_eu_nagisa_riegler
---
- tapOn:
    id: 'input-email'
- inputText:
    text: 'testuser@example.com'
- hideKeyboard
- tapOn:
    id: 'input-password'
- inputText:
    text: 'Password123'
- hideKeyboard
- tapOn:
    id: 'login-button'
- assertVisible:
    id: 'user-page'
