appId: com.final_project_winter_2025_eu_nagisa_riegler
---
- tapOn:
    id: logout-button-text
- tapOn:
    id: input-email
- inputText:
    text: testuser@example.com
- tapOn:
    id: input-password
- inputText:
    text: Password123
- tapOn:
    id: login-button
- assertVisible:
    id: user-page
- runFlow:
    when:
      visible:
        id: 'user-page'
    file: 'write-album.yml'
