appId: com.final_project_winter_2025_eu_nagisa_riegler
---
- stopApp
- launchApp:
    clearState: true
- assertVisible: PixVault
- tapOn:
    id: register-button
- tapOn:
    id: input-username
- inputText:
    text: TestUser
- hideKeyboard
- tapOn:
    id: input-birthday
- inputText:
    text: 1990-01-01
- hideKeyboard
- tapOn:
    id: input-country
- inputText:
    text: Norway
- hideKeyboard
- tapOn:
    id: input-description
- inputText:
    text: This is a test user.
- hideKeyboard
- tapOn:
    id: input-email
- inputText:
    text: testuser@example.com
- hideKeyboard
- tapOn:
    id: input-password
- inputText:
    text: Password123
- hideKeyboard
- tapOn:
    id: input-confirm-password
- inputText:
    text: Password123
- hideKeyboard
- tapOn:
    id: register
- assertVisible:
    id: 'avatar'
